--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "i18next": "^19.8.4",
     "i18next-http-backend": "^1.0.22",
     "keycloak-js": "^12.0.1",
@@ -30,7 +31,8 @@
     "redux-thunk": "^2.3.0",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -80,6 +82,7 @@
     "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-logger": "^3.0.8",
+    "@types/yup": "^0.29.11",
     "axios-mock-adapter": "^1.19.0",
     "cypress": "^6.2.1",
     "cypress-keycloak-commands": "^1.2.0",
