Remove temp change to prevent images to be published

--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -52,7 +52,7 @@ http {
         }
 
         location /api/controls {
-            rewrite         ^/api/controls/(.*)$ /${CONTROLS_API_SUBPATH}/$1 break;
+            rewrite         ^/api/controls/(.*)$ /controls/$1 break;
             proxy_pass      ${CONTROLS_API_URL};
         }
 
@@ -62,7 +62,7 @@ http {
 
         error_page 500 502 503 504 /50x.html;
             location = /50x.html {
-        }        
+        }
     }
 
 }
