--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -34,59 +34,15 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         browser: [chrome, firefox]
-    services:
-      keycloak:
-        image: quay.io/keycloak/keycloak:12.0.2
-        ports:
-          - 8180:8080
-        env:
-          KEYCLOAK_USER: admin
-          KEYCLOAK_PASSWORD: admin
-        options: >-
-          --health-cmd "curl --fail http://localhost:8080/auth || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-      controls-db:
-        image: postgres:13.1
-        ports:
-          - 5432:5432
-        env:
-          POSTGRES_USER: user
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: controls_db
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-      controls:
-        image: quay.io/mrizzi/poc-controls:add-metadata-to-hal-native
-        ports:
-          - 8080:8080
-        env:
-          QUARKUS_DATASOURCE_USERNAME: user
-          QUARKUS_DATASOURCE_PASSWORD: password
-          QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://controls-db:5432/controls_db
-          QUARKUS_OIDC_AUTH_SERVER_URL: http://keycloak:8080/auth/realms/konveyor
-          QUARKUS_OIDC_CLIENT_ID: controls-api
-          QUARKUS_OIDC_CREDENTIALS_SECRET: secret
-        options: >-
-          --health-cmd "curl --fail http://localhost:8080/controls/q/health || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Keycloak Admin CLI
-        uses: carlosthe19916/keycloak-action@0.4
-        with:
-          server: http://keycloak:8080/auth
-          username: admin
-          password: admin
-          kcadm: create realms -f konveyor-realm.json
+      - name: Dependencies
+        run: docker-compose up -d
+      - name: wait-on
+        run: docker ps -a && sleep 50s
+      - name: wait-on
+        run: docker ps -a
       - run: yarn install
       - run: yarn build:instrumentation
       - name: Cypress run
