--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,53 @@ version: '3'
 
 services:
   keycloak:
-    image: quay.io/keycloak/keycloak:latest
+    image: quay.io/keycloak/keycloak:12.0.2
     ports:
-      - 8180:8080
+      - 8080:8080
     environment:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: admin
       KEYCLOAK_IMPORT: /tmp/konveyor-realm.json
     volumes:
-      - ./konveyor-realm.json:/tmp/konveyor-realm.json:ro
+      - ./konveyor-realm.json:/tmp/konveyor-realm.json:z
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8080/auth || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      
+  controls-db:
+    image: postgres:13.1
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: controls_db
+    healthcheck:
+      test: ["CMD", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  controls:
+    image: quay.io/mrizzi/poc-controls:add-metadata-to-hal-native
+    ports:
+      - 8180:8080
+    environment:
+      QUARKUS_DATASOURCE_USERNAME: user
+      QUARKUS_DATASOURCE_PASSWORD: password
+      QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://controls-db:5432/controls_db
+      QUARKUS_OIDC_AUTH_SERVER_URL: http://keycloak:8080/auth/realms/konveyor
+      QUARKUS_OIDC_CLIENT_ID: controls-api
+      QUARKUS_OIDC_CREDENTIALS_SECRET: secret
+    # depends_on:
+    #   - keycloak
+    #   - controls-db
+    depends_on:
+      keycloak:
+        condition: service_healthy
+      controls-db:
+        condition: service_healthy
+
+
