--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -9,26 +9,26 @@ on:
       - master
 
 jobs:
-  unit-test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: yarn install
-      - run: yarn build
-      - run: yarn test --coverage --watchAll=false
-      - uses: codecov/codecov-action@v1
-        with:
-          flags: unitests
+  # unit-test:
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       node-version: [10.x, 12.x, 14.x]
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Use Node.js ${{ matrix.node-version }}
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: ${{ matrix.node-version }}
+  #     - run: yarn install
+  #     - run: yarn build
+  #     - run: yarn test --coverage --watchAll=false
+  #     - uses: codecov/codecov-action@v1
+  #       with:
+  #         flags: unitests
 
   e2e:
-    needs: [unit-test]
+    # needs: [unit-test]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
