--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,25 +30,25 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-
-  controls:
-    image: quay.io/mrizzi/poc-controls:add-metadata-to-hal-native
-    ports:
-      - 8180:8080
-    environment:
-      QUARKUS_DATASOURCE_USERNAME: user
-      QUARKUS_DATASOURCE_PASSWORD: password
-      QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://controls-db:5432/controls_db
-      QUARKUS_OIDC_AUTH_SERVER_URL: http://keycloak:8080/auth/realms/konveyor
-      QUARKUS_OIDC_CLIENT_ID: controls-api
-      QUARKUS_OIDC_CREDENTIALS_SECRET: secret
-    # depends_on:
-    #   - keycloak
-    #   - controls-db
     depends_on:
       keycloak:
         condition: service_healthy
-      controls-db:
-        condition: service_healthy
+
+  # controls:
+  #   image: quay.io/mrizzi/poc-controls:add-metadata-to-hal-native
+  #   ports:
+  #     - 8180:8080
+  #   environment:
+  #     QUARKUS_DATASOURCE_USERNAME: user
+  #     QUARKUS_DATASOURCE_PASSWORD: password
+  #     QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://controls-db:5432/controls_db
+  #     QUARKUS_OIDC_AUTH_SERVER_URL: http://keycloak:8080/auth/realms/konveyor
+  #     QUARKUS_OIDC_CLIENT_ID: controls-api
+  #     QUARKUS_OIDC_CREDENTIALS_SECRET: secret
+  #   depends_on:
+  #     keycloak:
+  #       condition: service_healthy
+  #     controls-db:
+  #       condition: service_healthy
 
 
