--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -70,12 +70,15 @@ jobs:
           username: admin
           password: admin
           kcadm: create realms -f konveyor-realm.json
-      - name: Dependencies
-        run: docker-compose --verbose up
-      - name: wait-on
-        run: docker ps -a && sleep 50s
-      - name: wait-on
-        run: docker ps -a
+      - name: Controls
+        run: |
+          docker run -d -p 8080:8080 quay.io/mrizzi/poc-controls:add-metadata-to-hal-native \
+          -e QUARKUS_DATASOURCE_USERNAME=user \
+          -e QUARKUS_DATASOURCE_PASSWORD=password \
+          -e QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://localhost:5432/controls_db \
+          -e QUARKUS_OIDC_AUTH_SERVER_URL=http://localhost:8180/auth/realms/konveyor \
+          -e QUARKUS_OIDC_CLIENT_ID=controls-api \
+          -e QUARKUS_OIDC_CREDENTIALS_SECRET0secret
       - run: yarn install
       - run: yarn build:instrumentation
       - name: Cypress run
