--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -79,7 +79,7 @@ jobs:
           -e QUARKUS_OIDC_AUTH_SERVER_URL=http://localhost:8180/auth/realms/konveyor \
           -e QUARKUS_OIDC_CLIENT_ID=controls-api \
           -e QUARKUS_OIDC_CREDENTIALS_SECRET=secret \
-          quay.io/mrizzi/poc-controls:add-metadata-to-hal-native
+          quay.io/mrizzi/poc-controls:latest-native
       - name: Controls
         run: sleep 15s && docker ps
       - run: yarn install
