--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -37,7 +37,6 @@ jobs:
     services:
       keycloak:
         image: quay.io/keycloak/keycloak:12.0.1
-        network: "github"
         ports:
           - 8180:8080
         env:
@@ -50,7 +49,6 @@ jobs:
           --health-retries 5
       backend-db:
         image: postgres:13.1
-        network: "github"
         ports:
           - 5432:5432
         env:
@@ -73,7 +71,7 @@ jobs:
           password: admin
           kcadm: create realms -f konveyor-realm.json
       - name: Controls API
-        run: docker run -d --name controls --network github -p 8080:8080 -e QUARKUS_DATASOURCE_USERNAME=user -e QUARKUS_DATASOURCE_PASSWORD=password -e QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://localhost:5432/controls_db -e QUARKUS_OIDC_AUTH_SERVER_URL=http://localhost:8180/auth/realms/konveyor -e QUARKUS_OIDC_CLIENT_ID=controls-api -e QUARKUS_OIDC_CREDENTIALS_SECRET=secret quay.io/mrizzi/poc-controls:latest-native
+        run: docker run -d --name controls --network "${{ job.services.network }}" -p 8080:8080 -e QUARKUS_DATASOURCE_USERNAME=user -e QUARKUS_DATASOURCE_PASSWORD=password -e QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://localhost:5432/controls_db -e QUARKUS_OIDC_AUTH_SERVER_URL=http://localhost:8180/auth/realms/konveyor -e QUARKUS_OIDC_CLIENT_ID=controls-api -e QUARKUS_OIDC_CREDENTIALS_SECRET=secret quay.io/mrizzi/poc-controls:latest-native
       - name: Controls
         run: sleep 15s && docker ps
       - name: Controls
