--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "@types/redux-logger": "^3.0.8",
     "@types/yup": "^0.29.11",
     "axios-mock-adapter": "^1.19.0",
-    "cypress": "^6.2.1",
+    "cypress": "6.4.0",
     "cypress-keycloak-commands": "^1.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
