--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -74,14 +74,16 @@ jobs:
         run: |
           docker run -d --name controls --network ${{ job.services.backend-db.network }} --network-alias controls -p 8080:8080 -e QUARKUS_HTTP_PORT=8080 -e QUARKUS_DATASOURCE_USERNAME=user -e QUARKUS_DATASOURCE_PASSWORD=password -e QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://backend-db:5432/controls_db -e QUARKUS_OIDC_AUTH_SERVER_URL=http://keycloak:8080/auth/realms/konveyor -e QUARKUS_OIDC_CLIENT_ID=controls-api -e QUARKUS_OIDC_CREDENTIALS_SECRET=secret quay.io/mrizzi/poc-controls:latest-native
           sleep 5s && docker logs controls
-      - run: yarn install
-      - run: yarn build:instrumentation
+      - name: Build
+        run: |
+          yarn install
+          yarn build:instrumentation
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
           record: false
           start: yarn run ui:start
-          wait-on: 'http://localhost:3000'
+          wait-on: "http://localhost:3000"
           wait-on-timeout: 120
           config: pageLoadTimeout=100000
           browser: ${{ matrix.browser }}
@@ -100,7 +102,6 @@ jobs:
       - uses: codecov/codecov-action@v1
         with:
           flags: e2etests
-
   # container-images:
   #   if: ${{ github.event_name != 'pull_request' && github.repository_owner == 'carlosthe19916' }}
   #   runs-on: ubuntu-latest
