--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -9,26 +9,29 @@ on:
       - master
 
 jobs:
-  # unit-test:
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       node-version: [10.x, 12.x, 14.x]
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Use Node.js ${{ matrix.node-version }}
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: ${{ matrix.node-version }}
-  #     - run: yarn install
-  #     - run: yarn build
-  #     - run: yarn test --coverage --watchAll=false
-  #     - uses: codecov/codecov-action@v1
-  #       with:
-  #         flags: unitests
+  unit-test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Build
+        run: |
+          yarn install
+          yarn build
+      - name: Test
+        run: yarn test --coverage --watchAll=false
+      - uses: codecov/codecov-action@v1
+        with:
+          flags: unitests
 
   e2e:
-    # needs: [unit-test]
+    needs: [unit-test]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -72,7 +75,14 @@ jobs:
           kcadm: create realms -f konveyor-realm.json
       - name: Controls API
         run: |
-          docker run -d --name controls --network ${{ job.services.backend-db.network }} --network-alias controls -p 8080:8080 -e QUARKUS_HTTP_PORT=8080 -e QUARKUS_DATASOURCE_USERNAME=user -e QUARKUS_DATASOURCE_PASSWORD=password -e QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://backend-db:5432/controls_db -e QUARKUS_OIDC_AUTH_SERVER_URL=http://keycloak:8080/auth/realms/konveyor -e QUARKUS_OIDC_CLIENT_ID=controls-api -e QUARKUS_OIDC_CREDENTIALS_SECRET=secret quay.io/mrizzi/poc-controls:latest-native
+          docker run -d --name controls --network ${{ job.services.backend-db.network }} --network-alias controls -p 8080:8080 \
+          -e QUARKUS_HTTP_PORT=8080 \
+          -e QUARKUS_DATASOURCE_USERNAME=user \
+          -e QUARKUS_DATASOURCE_PASSWORD=password \
+          -e QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://backend-db:5432/controls_db \
+          -e QUARKUS_OIDC_AUTH_SERVER_URL=http://keycloak:8080/auth/realms/konveyor \
+          -e QUARKUS_OIDC_CLIENT_ID=controls-api \
+          -e QUARKUS_OIDC_CREDENTIALS_SECRET=secret quay.io/mrizzi/poc-controls:latest-native
           sleep 5s && docker logs controls
       - name: Build
         run: |
@@ -102,25 +112,28 @@ jobs:
       - uses: codecov/codecov-action@v1
         with:
           flags: e2etests
-  # container-images:
-  #   if: ${{ github.event_name != 'pull_request' && github.repository_owner == 'carlosthe19916' }}
-  #   runs-on: ubuntu-latest
-  #   needs: [unit-test, e2e]
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Use Node.js
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: 12.x
-  #     - run: yarn install
-  #     - run: yarn build
-  #     - name: Push to Quay.io
-  #       uses: elgohr/Publish-Docker-Github-Action@master
-  #       with:
-  #         registry: quay.io
-  #         name: carlosthe19916/controls-ui
-  #         username: ${{ secrets.QUAYIO_USERNAME }}
-  #         password: ${{ secrets.QUAYIO_PASSWORD }}
-  #         dockerfile: Dockerfile
-  #         snapshot: false
-  #         tags: "master"
+
+  container-images:
+    if: ${{ github.event_name != 'pull_request' && github.repository_owner == 'carlosthe19916' }}
+    runs-on: ubuntu-latest
+    needs: [unit-test, e2e]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - name: Build
+        run: |
+          yarn install
+          yarn build
+      - name: Push to Quay.io
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          registry: quay.io
+          name: carlosthe19916/controls-ui
+          username: ${{ secrets.QUAYIO_USERNAME }}
+          password: ${{ secrets.QUAYIO_PASSWORD }}
+          dockerfile: Dockerfile
+          snapshot: false
+          tags: "master"
