--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: admin
       KEYCLOAK_IMPORT: /tmp/konveyor-realm.json
+      DB_VENDOR: h2
     volumes:
       - ./konveyor-realm.json:/tmp/konveyor-realm.json:z
     healthcheck:
