--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -50,7 +50,7 @@ jobs:
   #         --health-interval 10s
   #         --health-timeout 5s
   #         --health-retries 5
-  #     backend-db:
+  #     controls-db:
   #       image: postgres:13.1
   #       ports:
   #         - 5432:5432
@@ -75,11 +75,11 @@ jobs:
   #         kcadm: create realms -f konveyor-realm.json
   #     - name: Controls API
   #       run: |
-  #         docker run -d --name controls --network ${{ job.services.backend-db.network }} --network-alias controls -p 8080:8080 \
+  #         docker run -d --name controls --network ${{ job.services.controls-db.network }} --network-alias controls -p 8080:8080 \
   #         -e QUARKUS_HTTP_PORT=8080 \
   #         -e QUARKUS_DATASOURCE_USERNAME=user \
   #         -e QUARKUS_DATASOURCE_PASSWORD=password \
-  #         -e QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://backend-db:5432/controls_db \
+  #         -e QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://controls-db:5432/controls_db \
   #         -e QUARKUS_OIDC_AUTH_SERVER_URL=http://keycloak:8080/auth/realms/konveyor \
   #         -e QUARKUS_OIDC_CLIENT_ID=controls-api \
   #         -e QUARKUS_OIDC_CREDENTIALS_SECRET=secret quay.io/mrizzi/poc-controls:latest-native
@@ -159,7 +159,7 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-      backend-db:
+      controls-db:
         image: postgres:13.1
         ports:
           - 5432:5432
@@ -183,11 +183,11 @@ jobs:
           kcadm: create realms -f konveyor-realm.json
       - name: Controls API
         run: |
-          docker run -d --name controls --network ${{ job.services.backend-db.network }} --network-alias controls -p 8080:8080 \
+          docker run -d --name controls --network ${{ job.services.controls-db.network }} --network-alias controls -p 8080:8080 \
           -e QUARKUS_HTTP_PORT=8080 \
           -e QUARKUS_DATASOURCE_USERNAME=user \
           -e QUARKUS_DATASOURCE_PASSWORD=password \
-          -e QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://backend-db:5432/controls_db \
+          -e QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://controls-db:5432/controls_db \
           -e QUARKUS_OIDC_AUTH_SERVER_URL=http://keycloak:8080/auth/realms/konveyor \
           -e QUARKUS_OIDC_CLIENT_ID=controls-api \
           -e QUARKUS_OIDC_CREDENTIALS_SECRET=secret \
@@ -195,12 +195,12 @@ jobs:
           sleep 5s && docker logs controls
       - name: Tackle UI
         run: |
-          docker run -d --name tackle-ui --network ${{ job.services.backend-db.network }} --network-alias tackle-ui -p 3000:8080 \
+          docker run -d --name tackle-ui --network ${{ job.services.controls-db.network }} --network-alias tackle-ui -p 3000:8080 \
           -e SSO_REALM=konveyor \
           -e SSO_CLIENT_ID=tackle-ui \
           -e SSO_SERVER_URL=http://keycloak:8080/auth \
           -e CONTROLS_API_URL=http://controls:8080/controls \
-          quay.io/carlosthe19916/controls-ui:master
+          quay.io/carlosthe19916/controls-ui:nginx
           sleep 5s && docker logs tackle-ui
       - name: Cypress run
         uses: cypress-io/github-action@v2
@@ -209,7 +209,7 @@ jobs:
           # start: yarn run ui:start
           wait-on: "http://localhost:3000"
           wait-on-timeout: 120
-          config: pageLoadTimeout=100000
+          config: pageLoadTimeout=100000;auth_base_url=http://localhost:3000/auth
           browser: ${{ matrix.browser }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
