--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -52,6 +52,8 @@ http {
         }
 
         location /auth {
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;     
             proxy_pass      ${SSO_SERVER_URL};
         }
 
