--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -210,9 +210,10 @@ jobs:
           wait-on-timeout: 120
           config: pageLoadTimeout=100000
           browser: ${{ matrix.browser }}
-          env: auth_base_url=http://localhost:3000/auth
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CYPRESS_auth_base_url: http://localhost:3000/auth
+          CYPRESS_controls_base_url: http://localhost:8080/controls
       - uses: actions/upload-artifact@v1
         if: failure()
         with:
