--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -145,7 +145,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        browser: [chrome, firefox]
+        # browser: [chrome, firefox]
+        browser: [chrome]
     services:
       keycloak:
         image: quay.io/keycloak/keycloak:12.0.2
