--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "formik": "^2.2.6",
     "i18next": "^19.8.4",
     "i18next-http-backend": "^1.0.22",
-    "keycloak-js": "^12.0.1",
+    "keycloak-js": "12.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.8.5",
@@ -84,7 +84,7 @@
     "@types/redux-logger": "^3.0.8",
     "@types/yup": "^0.29.11",
     "axios-mock-adapter": "^1.19.0",
-    "cypress": "6.4.0",
+    "cypress": "6.5.0",
     "cypress-keycloak-commands": "^1.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
