--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -223,6 +223,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CYPRESS_auth_base_url: http://localhost:8180/auth
           CYPRESS_controls_base_url: http://localhost:8080/controls
+          DEBUG: 'cypress:*'
       - uses: actions/upload-artifact@v1
         if: failure()
         with:
