--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -213,9 +213,8 @@ jobs:
           browser: ${{ matrix.browser }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CYPRESS_auth_base_url: /auth
+          CYPRESS_auth_base_url: http://localhost:3000/auth
           CYPRESS_controls_base_url: http://localhost:8080/controls
-          DEBUG: 'cypress:*'
       - uses: actions/upload-artifact@v1
         if: failure()
         with:
