--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -138,27 +138,27 @@ jobs:
           snapshot: false
           tags: "master"
 
-  container-images:
-    if: ${{ github.event_name != 'pull_request' && github.repository_owner == 'carlosthe19916' }}
-    runs-on: ubuntu-latest
-    needs: [unit-test, e2e]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - name: Build
-        run: |
-          yarn install
-          yarn build
-      - name: Push to Quay.io
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          registry: quay.io
-          name: carlosthe19916/controls-ui
-          username: ${{ secrets.QUAYIO_USERNAME }}
-          password: ${{ secrets.QUAYIO_PASSWORD }}
-          dockerfile: Dockerfile
-          snapshot: false
-          tags: "master"
+  # container-images:
+  #   if: ${{ github.event_name != 'pull_request' && github.repository_owner == 'carlosthe19916' }}
+  #   runs-on: ubuntu-latest
+  #   needs: [unit-test, e2e]
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Use Node.js
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 12.x
+  #     - name: Build
+  #       run: |
+  #         yarn install
+  #         yarn build
+  #     - name: Push to Quay.io
+  #       uses: elgohr/Publish-Docker-Github-Action@master
+  #       with:
+  #         registry: quay.io
+  #         name: carlosthe19916/controls-ui
+  #         username: ${{ secrets.QUAYIO_USERNAME }}
+  #         password: ${{ secrets.QUAYIO_PASSWORD }}
+  #         dockerfile: Dockerfile
+  #         snapshot: false
+  #         tags: "master"
