--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -131,7 +131,7 @@ jobs:
         uses: elgohr/Publish-Docker-Github-Action@3.02
         with:
           registry: docker.pkg.github.com
-          name: ${{ github.repository_owner }}/${{ github.event.repository.name }}/tackle-ui
+          name: ${{ github.event.pull_request.head.repo.full_name }}/tackle-ui
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           dockerfile: Dockerfile
