--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -137,7 +137,7 @@ jobs:
           dockerfile: Dockerfile
           snapshot: false
           tags: "${{ github.event.pull_request.head.ref }}"
-      - name: Comment
+      - name: Comment PR
         uses: thollander/actions-comment-pull-request@master
         with:
           message: 'Example of message !'
